[package]
name = "imglang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
piet = "0.6.2"
piet-svg = "0.6.2"
rhai = { version = "1.19.0", features = ["internals", "sync"] }
winnow = "0.6.18"
