[package]
name = "imglang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
eframe = "0.29.1"
egui = { version = "0.29.1", features = ["persistence"] }
egui_code_editor = "0.2.10"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
image = { version = "0.25.2", features = ["png"] }
piet = "0.6.2"
piet-svg = "0.6.2"
rfd = "0.15.0"
rhai = { version = "1.19.0", features = ["internals", "sync"] }
winnow = "0.6.18"
